# Quan-Ly-Cong-An

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
database/: db_manager.py
models/: award.py  person.py  task.py
ui/: main_window.py  task_creation.py  task_detail_dialog.py  task_detail_view.py  task_edit_dialog.py  task_list.py  task_merge.py
utils/: excel_manager.py
